Got variable passing between pages to work. Loading bar currently freezes application.

--- a/ExcelReaderWPF/ExcelReaderWPF.csproj
+++ b/ExcelReaderWPF/ExcelReaderWPF.csproj
@@ -68,7 +68,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CS Files\CompareSheets.cs" />
-    <Compile Include="CS Files\Program.cs" />
+    <Compile Include="CS Files\OpenExcel.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
