--- a/ExcelReaderWPF/ExcelReaderWPF.csproj
+++ b/ExcelReaderWPF/ExcelReaderWPF.csproj
@@ -33,9 +33,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>TextTemplate.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -140,6 +144,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="untitled_1_aG7_icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="TextTemplate.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
