Compare All page has functionality, but does not yet work. Currently spawns 8 different excel threads when it should be doing one after another.

--- a/ExcelReaderWPF/ExcelReaderWPF.csproj
+++ b/ExcelReaderWPF/ExcelReaderWPF.csproj
@@ -80,6 +80,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CS Files\SheetComparer.cs" />
+    <Compile Include="CS Files\Verification.cs" />
     <Compile Include="Pages\CompareAllPage.xaml.cs">
       <DependentUpon>CompareAllPage.xaml</DependentUpon>
     </Compile>
